objects/SolutionsManifestEntry__c/SolutionsManifestEntry__c.object-meta.xml
<CustomObject>
    <label>SolutionsManifestEntry</label>
    <nameField>
        <label>SolutionsManifestEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SolutionsManifestEntries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>