objects/SolutionsManifestEntry__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>