objects/SolutionsManifestEntry__c/fields/deleted_flag__c.field-meta.xml
<CustomField>
    <fullName>deleted_flag__c</fullName>
    <label>deleted_flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>