objects/SolutionsManifestEntry__c/fields/imported_version__c.field-meta.xml
<CustomField>
    <fullName>imported_version__c</fullName>
    <label>imported_version</label>
    <length>32</length>
    <type>Text</type>
</CustomField>