objects/SolutionsManifestEntry__c/fields/last_update__c.field-meta.xml
<CustomField>
    <fullName>last_update__c</fullName>
    <label>last_update</label>
    <type>DateTime</type>
</CustomField>