objects/SolutionsManifestEntry__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>