objects/SolutionsManifestEntry__c/fields/solutionid__c.field-meta.xml
<CustomField>
    <fullName>solutionid__c</fullName>
    <label>solution_id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>